src/test/deca/codegen/invalid/SansObjet/Println-LongImmediate.ass
; start main program
; Main program
; Beginning of main instructions:
	WSTR "Hello, bonjour, guten tag, buenos dias, ni hao, hay, AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
	WNL
	HALT
; end main program
